# sphinx-automodapi

./: .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  azure-template.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: check_milestone.yml  ci_workflows.yml  publish.yml
docs/: automodapi.rst  automodsumm.rst  conf.py  index.rst
hooks/: README.md  post-commit
sphinx_automodapi/: __init__.py  astropyautosummary.py  autodoc_enhancements.py  automodapi.py  automodsumm.py  smart_resolver.py  utils.py  utils_extra.py
sphinx_automodapi/templates/autosummary_core/: autosummary.rst  class.rst
sphinx_automodapi/tests/: __init__.py  helpers.py  test_autodoc_enhancements.py  test_automodapi.py  test_automodsumm.py  test_cases.py  test_utils.py
sphinx_automodapi/tests/cases/abstract_classes/output_prop_is_not_attr/api/: sphinx_automodapi.tests.example_module.abstract_classes.SequenceSubclass.rst
sphinx_automodapi/tests/cases/attribute_class/: README.md
sphinx_automodapi/tests/cases/attribute_class/input/: index.rst
sphinx_automodapi/tests/cases/attribute_class/output_prop_is_attr/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/attribute_class/output_prop_is_attr/api/: sphinx_automodapi.tests.example_module.attribute_class.ClassWithAttribute.rst
sphinx_automodapi/tests/cases/attribute_class/output_prop_is_not_attr/api/: sphinx_automodapi.tests.example_module.attribute_class.ClassWithAttribute.rst
sphinx_automodapi/tests/cases/class_with_property_warning/: README.md
sphinx_automodapi/tests/cases/class_with_property_warning/input/: index.rst
sphinx_automodapi/tests/cases/class_with_property_warning/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/class_with_property_warning/output/api/: sphinx_automodapi.tests.example_module.class_with_property_warning.Camelot.rst
sphinx_automodapi/tests/cases/classes_no_inherit/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/classes_no_inherit/output/api/: sphinx_automodapi.tests.example_module.classes.Egg.rst
sphinx_automodapi/tests/cases/classes_with_inherit/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/classes_with_inherit/output/api/: sphinx_automodapi.tests.example_module.classes.Egg.rst  sphinx_automodapi.tests.example_module.classes.Spam.rst
sphinx_automodapi/tests/cases/classes_with_inherit/output_prop_is_not_attr/api/: sphinx_automodapi.tests.example_module.classes.Egg.rst
sphinx_automodapi/tests/cases/func_headings/output/: index.rst.automodapi
sphinx_automodapi/tests/cases/func_noheading/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/func_nomaindocstring/: README.md
sphinx_automodapi/tests/cases/func_nomaindocstring/output/: index.rst.automodapi
sphinx_automodapi/tests/cases/func_simple/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/mixed_toplevel/: README.md
sphinx_automodapi/tests/cases/mixed_toplevel/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/mixed_toplevel_nodiagram/output/: index.rst.automodapi
sphinx_automodapi/tests/cases/nested/input/: index.rst
sphinx_automodapi/tests/cases/non_ascii/output/: index.rst.automodsumm
sphinx_automodapi/tests/cases/private_methods/: README.md
sphinx_automodapi/tests/cases/private_methods/output/: index.rst.automodapi
sphinx_automodapi/tests/cases/public_from_private/: README.md
sphinx_automodapi/tests/cases/public_from_private/input/: index.rst
sphinx_automodapi/tests/cases/public_from_private/output/: index.rst.automodapi  index.rst.automodsumm
sphinx_automodapi/tests/cases/special_methods/: README.md
sphinx_automodapi/tests/cases/special_methods/input/: index.rst
sphinx_automodapi/tests/cases/special_methods/output/: index.rst.automodsumm
sphinx_automodapi/tests/duplicated_warning/docs/: conf.py
sphinx_automodapi/tests/duplicated_warning/duplicated/foo/: foo.py
sphinx_automodapi/tests/example_module/: __init__.py  _private.py  attribute_class.py  class_with_property_warning.py  classes.py  mixed.py  nonascii.py  other_classes.py  private_classes.py  public.py  slots.py  stdlib.py
(+24 files in other folders)
