[metadata]
name = sphinx-automodapi
version = attr:sphinx_automodapi.__version__
description = Sphinx extension for auto-generating API documentation for entire modules
long_description = file:README.rst
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
url = http://astropy.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
install_requires =
    sphinx>=1.7

[options.extras_require]
test =
    pytest
    pytest-cov
    cython
    codecov
    coverage

[options.package_data]
sphinx_automodapi = templates/*/*.rst
sphinx_automodapi.tests = cases/*/*.*, cases/*/*/*.*, cases/*/*/*/*.*, cases/*/*/*/*/*.*
