[metadata]
name = sphinx-automodapi
description = Sphinx extension for auto-generating API documentation for entire modules
long_description = file:README.rst
long_description_content_type = text/x-rst
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
url = https://github.com/astropy/sphinx-automodapi
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    sphinx>=1.7

[options.extras_require]
test =
    pytest
    pytest-cov
    cython
    codecov
    coverage < 5.0

[options.package_data]
sphinx_automodapi = templates/*/*.rst
sphinx_automodapi.tests = cases/*/*.*, cases/*/*/*.*, cases/*/*/*/*.*, cases/*/*/*/*/*.*

[tool:pytest]
minversion = 4.6
testpaths = sphinx_automodapi
xfail_strict = true
filterwarnings =
    error
    ignore:The `docutils\.parsers\.rst\.directive\.html` module will be removed:DeprecationWarning
    ignore:'contextfunction' is renamed to 'pass_context':DeprecationWarning
    ignore:'environmentfilter' is renamed to 'pass_environment':DeprecationWarning

[flake8]
max-line-length = 100
