[metadata]
name = sphinx-automodapi
description = Sphinx extension for auto-generating API documentation for entire modules
long_description = file:README.rst
long_description_content_type = text/x-rst
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/astropy/sphinx-automodapi
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
    packaging
    sphinx>=4

[options.extras_require]
test =
    pytest
    pytest-cov
    cython
    coverage
    setuptools;python_version>='3.12'
rtd =
    sphinx-rtd-theme

[options.package_data]
sphinx_automodapi = templates/*/*.rst
sphinx_automodapi.tests = cases/*/*.*, cases/*/*/*.*, cases/*/*/*/*.*, cases/*/*/*/*/*.*, duplicated_warning/docs/*

[tool:pytest]
minversion = 4.6
testpaths = sphinx_automodapi
xfail_strict = true
filterwarnings =
    error
    ignore:The `docutils\.parsers\.rst\.directive\.html` module will be removed:DeprecationWarning
    ignore:'contextfunction' is renamed to 'pass_context':DeprecationWarning
    ignore:'environmentfilter' is renamed to 'pass_environment':DeprecationWarning
    ignore:distutils Version classes are deprecated:DeprecationWarning
    ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning
    ignore:The alias 'sphinx\.util\.SkipProgressMessage' is deprecated
    ignore:The alias 'sphinx\.util\.progress_message' is deprecated
    ignore:Deprecated call to.*pkg_resources\.declare_namespace:DeprecationWarning
    # pip 23.1 issue:
    ignore:pkg_resources is deprecated as an API:DeprecationWarning

[flake8]
max-line-length = 125
exclude = sphinx_automodapi/tests/test_autodoc_enhancements.py,sphinx_automodapi/tests/test_automodapi.py
